tests/ui/cond_not_bool.stderr
Error [E0110]: a condition must be Bool (true or false), but this is Int (a whole number)
  --> tests/ui/cond_not_bool.jet:2:8
    |
  2 |     if 1 {
    |        ^
 Why: the program needs a clear yes or no here
 Fix: compare the value to something, e.g. `x > 0` or `name == "ok"`
